client/editor/editor.scss
.NoteEditorContainer {
  $content-padding: 0 100px;

  height: 100vh;
  min-height: 650px;
  display: flex;
  flex-direction: column;
  align-items: center;

  .noteHeader {
    padding: $content-padding;
    width: 100%;
    font-weight: bold;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
  }
  #noteName {
    font-size: 3rem;
    color: $primary-color;
    &:focus,
    &:active {
      box-shadow: none;
      outline: none;
    }
  }
  .noteActions {
    margin-left: 12px;
    font-weight: normal;
    color: $color-grey;
    > i { font-size: 32px; }
    li {
      color: $color-grey-darkest;
      cursor: pointer;
    }
  }

  .readOnlyBanner {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 60px;
    margin:auto;
    background: rgba(0,0,0,.75);
    color: $color-grey-lightest;
    padding: 8px 14px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 18px;
    animation: .25s ease READONLY_BANNER_IN;

    > i { margin-right: 8px; }
  }

  .EditorTerminal {
    padding: $content-padding;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    display: flex;
    justify-content: center;
    width: 100%;
  }

  &.isTerminalActive .noteHeader,
  &.isTerminalActive .EditorTerminal {
    padding: 0 250px 0 100px;
  }

  .editor {
    margin-top: 20px;
    width: 100%;
    position: relative;
  }

  .blockTypeBtn {
    margin-right: 12px;
    // transition: all .25s ease;
    i,
    h5 {
      transition: all .25s ease;
    }
  }

  .terminalBtn {
    position: fixed;
    bottom: 32px;
    right: 32px;
    z-index: $zindex-top-higher + 10;
  }

  .terminal {
    position: fixed;
    top: 100px;
    right: 32px;
    font-family: monospace;
    background-color: black;
    color: white;
    min-width: 400px;
    max-width: 400px;
    min-height: 500px;
    height: 70%;
    max-height: 800px;
    text-align: center;
    border-radius: 15px;
    padding: 15px;
    overflow: hidden;
    display: flex;
    flex-flow: column nowrap;
    z-index: $zindex-top;
    animation: .25s ease TERMINAL_IN;
  }
  .terminalTitle {
    margin: 8px;
  }
  .terminalSubtitle {
    margin: 0;
  }

  .compileAnswer {
    flex: 1;
    height: 100%;
    overflow-y: auto;
  }

  .RichEditor-controls {
    font-family: 'Helvetica', sans-serif;
    font-size: 14px;
    margin-bottom: 5px;
    user-select: none;
  }

  .RichEditor-styleButton {
    color: #999;
    cursor: pointer;
    margin-right: 16px;
    padding: 2px 0;
    display: inline-block;
  }

  .RichEditor-hidePlaceholder .public-DraftEditorPlaceholder-root {
    display: none;
  }

  .RichEditor-editor .public-DraftStyleDefault-pre {
    font-family: 'Inconsolata', 'Menlo', 'Consolas', monospace;
    font-size: 16px;
    margin: 0px;
  }

  .RichEditor-editor .public-DraftStyleDefault-pre > pre {
    background-color: rgba(0, 0, 0, 0.05);
    padding: 15px;
  }

  .public-DraftEditor-content > div > * {
    padding: 10px 0 10px 0;
  }

  .public-DraftEditor-content > div > h1 {
    padding: 20px 0 20px 0 !important;
    margin: 0 !important;
  }

  .public-DraftEditor-content > div > h2 {
    padding: 20px 0 20px 0 !important;
    margin: 0 !important;
  }

  .public-DraftEditor-content > div > h3 {
    padding: 20px 0 20px 0 !important;
    margin: 0 !important;
  }

  .public-DraftStyleDefault-ol, .public-DraftStyleDefault-ul {
    padding: 10px !important;
    margin: 0 !important;
  }

  .public-DraftEditor-content > div > h2 {
    padding: 20px 0 20px 0 !important;
    margin: 0 !important;
  }

  .public-DraftEditor-content > div > h3 {
    padding: 20px 0 20px 0 !important;
    margin: 0 !important;
  }

  .public-DraftStyleDefault-ol, .public-DraftStyleDefault-ul {
    padding: 10px !important;
    margin: 0 !important;
  }

  .public-DraftStyleDefault-orderedListItem, .public-DraftStyleDefault-unorderedListItem {
    padding: 5px !important;
  }

  .public-DraftEditorPlaceholder-root {
    padding: 10px 0 10px 0;
  }

  .block-todo {

    input[type="checkbox"] {
      cursor: pointer;
      float: left;
      position: relative;
      top: 4px;
      left: -4px;
      opacity: 1 !important;
    }

    .public-DraftStyleDefault-block {
      margin-left: 18px;
    }

    .block-todo-completed {
      color: #949494;
      text-decoration: line-through;
    }
  }

  .pagebreak {
    min-width: 700px;
    height: 1px !important;
  }

  figure {
    margin: 10px 0 !important;
  }

  h6 {
    margin: 0.75em !important;
    cursor: pointer;
  }

  blockquote {
    border-left: 5px solid #4CA8DE;
    color: #555;
    font-family: 'Hoefler Text', 'Georgia', serif;
    font-size: 1.2em;
    margin: 0 0 10px 0 !important;
    padding: 10px 0 10px 0;
    background-color: #E2F2FF;
  }

  blockquote > div {
    margin-left: 15px;
  }

  .Outline {
    @include overflow-ellipsis();
    left: 20px;
    position: fixed;
    display: inline-block;
    top: 25%;
    min-height: 500px;
    max-height: 70%;
    width: 250px;
    overflow-y: auto;

    > * {
      transition: all .25s ease;
      opacity: 0;
      transform: translateX(-20px);
    }

    &:hover > * {
      opacity: 1;
      transform: translateX(0);
    }
  }

  /***** Responsive *****/
  @media (max-width: $screen-sm-max) {
   $content-padding: 0 24px;
   .noteHeader,
   .EditorTerminal,
   &.isTerminalActive .noteHeader,
   &.isTerminalActive .EditorTerminal { padding: $content-padding; }

   .terminalBtn,
   .terminal { display: none; }
  }
  @media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
    $content-padding: 0 64px;
    .noteHeader,
    .EditorTerminal { padding: $content-padding; }

    .terminal {
      min-width: 350px;
      max-width: 350px;
    }
    &.isTerminalActive .noteHeader,
    &.isTerminalActive .EditorTerminal {
      padding: 0 150px 0 64px;
    }
  }

  @keyframes TERMINAL_IN {
    from {
      opacity: 0;
      transform: translateX(20px);
    }
    to {
      opacity: 1;
      transform: translateX(0);
    }
  }

  @keyframes READONLY_BANNER_IN {
    from {
      opacity: 0;
      transform: translateY(-20px);
    }
    to {
      opacity: 1;
      transform: translateY(0);
    }
  }
}

